--- a/archlinuxcn/python-visions/lilac.yaml
+++ b/archlinuxcn/python-visions/lilac.yaml
@@ -5,6 +5,7 @@ build_prefix: extra-x86_64
 
 repo_depends:
   - python-imagehash
+  - python-multimethod
   - python-pywavelets
   - python-tangled-up-in-unicode
 
