--- a/archlinuxcn/v2raya/lilac.yaml
+++ b/archlinuxcn/v2raya/lilac.yaml
@@ -1,10 +1,7 @@
-pre_build: aur_pre_build
-
-post_build: aur_post_build
-
 update_on:
-  - source: aur
-    aur: v2raya
+  - source: github
+    github: mzz2017/v2rayA
+    use_latest_release: true
 
 maintainers:
   - github: dctxmei
