--- a/archlinuxcn/python-visions/lilac.yaml
+++ b/archlinuxcn/python-visions/lilac.yaml
@@ -13,6 +13,7 @@ update_on:
   - source: github
     github: dylan-profiler/visions
     use_max_tag: true
+    ignored: 0.50
   - alias: python
 # vim:set ts=2 sw=2 et:
 
