--- a/archlinuxcn/pygtk/lilac.yaml
+++ b/archlinuxcn/pygtk/lilac.yaml
@@ -9,9 +9,6 @@ pre_build: aur_pre_build
 
 post_build: aur_post_build
 
-repo_depends:
-  - pygtk
-
 update_on:
   - source: aur
-    aur: pystopwatch
+    aur: pygtk
