--- a/archlinuxcn/pacman-git/PKGBUILD
+++ b/archlinuxcn/pacman-git/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=pacman-git
 pkgver=5.2.1.r119.g406a3720
-pkgrel=2
+pkgrel=3
 pkgdesc="A library-based package manager with dependency support"
 arch=('i686' 'x86_64' 'arm' 'armv6h' 'armv7h' 'aarch64')
 url="https://www.archlinux.org/pacman/"
@@ -17,7 +17,7 @@ optdepends=('pacman-contrib: various helper utilities'
             'perl-locale-gettext: translation support in makepkg-template')
 makedepends=('git' 'asciidoc' 'meson')
 checkdepends=('python' 'fakechroot')
-provides=("pacman=${pkgver%.*.*}")
+provides=("pacman=${pkgver%.*.*}" "libalpm.so=12")
 conflicts=('pacman')
 backup=("etc/pacman.conf"
         "etc/makepkg.conf")
