--- a/archlinuxcn/python2-configobj/lilac.yaml
+++ b/archlinuxcn/python2-configobj/lilac.yaml
@@ -6,3 +6,7 @@ post_build: aur_post_build
 update_on:
   - source: aur
     aur: python2-configobj
+  - source: archpkg
+    archpkg: python2
+    from_pattern: '^(\d+\.\d+)\..*'
+    to_pattern: '\1'
