--- a/archlinuxcn/python-humanfriendly/lilac.yaml
+++ b/archlinuxcn/python-humanfriendly/lilac.yaml
@@ -3,9 +3,7 @@ maintainers:
 build_prefix: extra-x86_64
 pre_build: aur_pre_build
 post_build: aur_post_build
-repo_depends:
-  - python-humanfriendly
 update_on:
   - source: aur
-    aur: python-coloredlogs
+    aur: python-humanfriendly
   - alias: python
