--- a/archlinuxcn/stack-static/lilac.yaml
+++ b/archlinuxcn/stack-static/lilac.yaml
@@ -8,6 +8,6 @@ build_prefix: extra-x86_64
 
 update_on:
   - source: aur
-    aur: stack-bin
-pre_build: aur_pre_build
+    aur: stack-static
+
 post_build: aur_post_build
