rocketchat-desktop: sync with aur

--- a/archlinuxcn/rocketchat-desktop/PKGBUILD
+++ b/archlinuxcn/rocketchat-desktop/PKGBUILD
@@ -1,48 +1,46 @@
-# Maintainer: Matthias Lisin <ml@visu.li>
+# Maintainer: ml <>
 # Contributor: sum01 <sum01@protonmail.com>
 pkgname=rocketchat-desktop
-pkgver=2.14.6
-_srcname="Rocket.Chat.Electron-$pkgver"
+pkgver=3.0.4
+_pkgname="Rocket.Chat.Electron-${pkgver}"
 pkgrel=1
 pkgdesc='Rocket.Chat Native Cross-Platform Desktop Application via Electron.'
 arch=('i686' 'x86_64')
-url="https://github.com/RocketChat/Rocket.Chat.Electron"
+url='https://github.com/RocketChat/Rocket.Chat.Electron'
 license=('MIT')
-depends=('nss' 'libxss' 'gconf' 'gtk3' 'glibc')
-makedepends=('nodejs' 'node-gyp' 'python2' 'yarn')
+depends=('electron')
+makedepends=('nodejs' 'node-gyp' 'python' 'yarn')
 conflicts=('rocketchat-client-bin')
-source=("$pkgname-$pkgver.tar.gz::https://github.com/RocketChat/Rocket.Chat.Electron/archive/$pkgver.tar.gz"
-        fix-linux-target.patch
-        fix-gulp-release.patch
+install=rocketchat-desktop.install
+source=("${url}/archive/${pkgver}/${pkgname}-${pkgver}.tar.gz"
+        rocketchat-desktop
         rocketchat-desktop.desktop)
-sha512sums=('58b427e9745fa8b3866d1ea9c144c700faed7838c0fba6f070592dfdaea7e6509e6e53f5983494431a7976db919b65ad798b7b5cacac998e049239bb41ede0b8'
-            '31e0b1d7d9a5fefa4ad4d186df2b3eb8849d7dee9dd3fa14fff6741006ef31191575a23ba62a86f53cf9fc692d138db6a380e2ad860077bc3d854c5a9083b716'
-            '796a2a56a1facc2519d65955bb39d78733c13b5993c4b03cd2af11b83aa9c6132c0fbf9e7160146c6c87bc91cb04c4e66932fe891449d031c787284b5ce9d72a'
-            'd87664b9bdf30eac3011393d094962e0d568a94b5eaf4c8e5f17529442dcba905cea7341527066102a97a07a981acd6ce045b8737eb78a7d81a2a2d05023fe26')
-if [[ $CARCH == "i686" ]]; then
-    _releasename="release:linux-ia32"
-    _distname="linux-ia32-unpacked"
-else
-    _releasename="release:linux-x64"
-    _distname="linux-unpacked"
-fi
+sha256sums=('131df2e938fcd5f8b917eac3321f5709d5393b4c02d7b251349b56a1f80e75ba'
+            '18fab390ffce4f89a17d5d71a7e78fea9afa9f9d2bcdafecb4f310d4f804996f'
+            '31fae4f98a61a774f84030fd43d2ef92c7633740dc5aa55967a21d0e29ea621a')
 
 prepare() {
-    patch -p1 -d "$_srcname" < fix-linux-target.patch
-    patch -p1 -d "$_srcname" < fix-gulp-release.patch
+  cd "$_pkgname"
+  yarn upgrade electron@"$(</usr/lib/electron/version)"
 }
 
 build() {
-    cd "$srcdir/$_srcname"
-    yarn install --non-interactive --pure-lockfile --cache-folder "$srcdir/yarn-cache"
-    yarn build --env=production "$_releasename"
+  cd "$_pkgname"
+  local i686=ia32 x86_64=x64
+  export NODE_ENV=production
+  yarn build
+  yarn run electron-builder --linux --"${!CARCH}" --dir \
+    -c.electronDist=/usr/lib/electron \
+    -c.electronVersion="$(</usr/lib/electron/version)"
 }
 
 package() {
-    install -d "$pkgdir"/{usr/bin,opt}
-    install -Dm644 "$srcdir/$_srcname/build/icons/512x512.png" "$pkgdir/usr/share/icons/hicolor/512x512/apps/$pkgname.png"
-    install -Dm644 "$srcdir/$pkgname.desktop" "$pkgdir/usr/share/applications/$pkgname.desktop"
-    install -Dm644 "$srcdir/$_srcname/LICENSE" "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
-    cp -r "$srcdir/$_srcname/dist/$_distname" "$pkgdir/opt/$pkgname"
-    ln -sf "/opt/$pkgname/$pkgname" "$pkgdir/usr/bin/$pkgname"
+  local i686=linux-ia32-unpacked x86_64=linux-unpacked
+  install -Dm644 -t "${pkgdir}/usr/share/applications" "${pkgname}.desktop"
+  install -Dm755 -t "${pkgdir}/usr/bin" "$pkgname"
+
+  cd "$_pkgname"
+  install -Dm644 "build/icons/512x512.png" "$pkgdir/usr/share/icons/hicolor/512x512/apps/$pkgname.png"
+  install -Dm644 -t "${pkgdir}/usr/share/licenses/${pkgname}" LICENSE
+  install -Dm644 "dist/${!CARCH}/resources/app.asar" "${pkgdir}/usr/lib/${pkgname}.asar"
 }
