ripgrep-skylake-git: get rid of simd-accel
* it doesn't compile
* users barely benefit from it because it only makes sense with UTF-16
  files

See also https://github.com/BurntSushi/ripgrep/issues/1684.

--- a/archlinuxcn/ripgrep-skylake-git/PKGBUILD
+++ b/archlinuxcn/ripgrep-skylake-git/PKGBUILD
@@ -27,7 +27,7 @@ pkgver () {
 build () {
   cd ripgrep
   echo "lto = true" >> Cargo.toml
-  RUSTFLAGS="-C target-cpu=skylake" cargo build --release --features 'simd-accel pcre2'
+  RUSTFLAGS="-C target-cpu=skylake" cargo build --release --features pcre2
   git checkout Cargo.toml
 }
 
