--- a/archlinuxcn/dislocker-noruby/lilac.yaml
+++ b/archlinuxcn/dislocker-noruby/lilac.yaml
@@ -1,8 +1,10 @@
 maintainers:
   - github: DDoSolitary
 build_prefix: extra-x86_64
-pre_build: aur_pre_build
-post_build: aur_post_build
 update_on:
   - source: aur
     aur: dislocker-noruby
+  - source: archpkg
+    archpkg: mbedtls
+    provided: libmbedcrypto.so
+    strip_release: true
