--- a/archlinuxcn/libtins/lilac.yaml
+++ b/archlinuxcn/libtins/lilac.yaml
@@ -1,8 +1,14 @@
 maintainers:
   - github: DDoSolitary
 build_prefix: extra-x86_64
-pre_build: aur_pre_build
-post_build: aur_post_build
 update_on:
   - source: aur
     aur: libtins
+  - source: archpkg
+    archpkg: libpcap
+    provided: libpcap.so
+    strip_release: true
+  - source: archpkg
+    archpkg: openssl
+    from_pattern: ^(\d\.\d)\..*
+    to_pattern: \1
