--- a/archlinuxcn/3dslicer-bin/PKGBUILD
+++ b/archlinuxcn/3dslicer-bin/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=3dslicer-bin
 _pkgname=3dslicer
 pkgver=4.11.20200930
-pkgrel=3
+pkgrel=4
 pkgdesc="A multi-platform, free open source software package for visualization and medical image computing"
 arch=('x86_64')
 url="https://www.slicer.org"
@@ -12,11 +12,12 @@ depends=('dbus' 'glib2')
 makedepends=('gendesk')
 provides=('3dslicer')
 conflicts=('3dslicer')
+options=(!strip !emptydirs)
 source=(
     "${_pkgname}-${pkgver}.tar.gz::http://download.slicer.org/download?os=linux&stability=release"
     "${_pkgname}.svg::https://github.com/Slicer/Slicer/raw/master/Resources/3DSlicerLogo-app-icon.svg"
 )
-sha512sums=('36f1b175f987e7d1e288f08d55c6942e494f1234bfdfb4ffae8517bb1711418c6ae3d5efd3f57dc31a7f65c451c8324d8c09d4de697b6b81d0a85ec48299c686'
+sha512sums=('0928f138c6c6b002a959c70eccad61c321ffc77289bf7813c20e265bea337119e55550cc1af6afd564877766e2e7b4d8332e673d894a251fef6144a2f27387a4'
             'c23104efcbec3d49b5c26ad5514ed74316423db4aa9e6c7894f02f7ddbe509b577de358dfdd2f7c492963f312b7c146f03d5e41a89ab1298811894dc18746225')
 
 prepare() {
