--- a/archlinuxcn/3dslicer-bin/lilac.yaml
+++ b/archlinuxcn/3dslicer-bin/lilac.yaml
@@ -1,8 +1,9 @@
 maintainers:
   - github: hubutui
+
 build_prefix: extra-x86_64
-pre_build: aur_pre_build
-post_build: aur_post_build
+
 update_on:
-  - source: aur
-    aur: 3dslicer-bin
+  - source: github
+    github: Slicer/Slicer
+    use_max_tag: true
