--- a/archlinuxcn/youtube-dl-git/lilac.yaml
+++ b/archlinuxcn/youtube-dl-git/lilac.yaml
@@ -4,6 +4,4 @@ maintainers:
 build_prefix: extra-x86_64
 pre_build: vcs_update
 post_build: git_pkgbuild_commit
-update_on:
-  - source: github
-    github: ytdl-org/youtube-dl
+managed: false
