v2ray-dctxmei: build by lilac

--- a/archlinuxcn/v2ray-dctxmei/lilac.yaml
+++ b/archlinuxcn/v2ray-dctxmei/lilac.yaml
@@ -1,4 +1,7 @@
+update_on:
+  - source: github
+    github: v2fly/v2ray-core
+    use_latest_release: true
+
 maintainers:
   - github: dctxmei
-
-managed: false
