--- a/archlinuxcn/v2ray-dctxmei/PKGBUILD
+++ b/archlinuxcn/v2ray-dctxmei/PKGBUILD
@@ -1,6 +1,4 @@
 # Maintainer: Dct Mei <dctxmei@gmail.com>
-# Maintainer: Felix Yan <felixonmars@archlinux.org>
-# Contributor: pandada8 <pandada8@gmail.com>
 
 pkgname=v2ray-dctxmei
 _pkgname=v2ray
@@ -26,7 +24,7 @@ sha256sums=('e78446333fd28ef8a3ec2c25612458bfc024a226008888ed5277201136f4ca97'
             '7d8cd2309f3cb54d888128e9e8150432756b60cf7e759da46ad8e848c0b0a386')
 
 build() {
-    cd "v2ray-core-${pkgver}"/
+    cd "${srcdir}"/"v2ray-core-${pkgver}"/
     export GOFLAGS="-buildmode=pie -trimpath -ldflags=-linkmode=external"
     export CGO_LDFLAGS="${LDFLAGS}"
     export CGO_CFLAGS="${CFLAGS}"
@@ -36,12 +34,12 @@ build() {
 }
 
 check() {
-    cd "v2ray-core-${pkgver}"/
+    cd "${srcdir}"/"v2ray-core-${pkgver}"/
     go test -p 1 -tags json -v -timeout 30m v2ray.com/core/...
 }
 
 package() {
-    cd "v2ray-core-$pkgver"/
+    cd "${srcdir}"/"v2ray-core-$pkgver"/
     install -d "${pkgdir}"/etc/v2ray/
     install -Dm 755 v2ray -t "${pkgdir}"/usr/bin/
     install -Dm 755 v2ctl -t "${pkgdir}"/usr/bin/
