Revert "pulseaudio-modules-bt: triger rebuild more often"
This reverts commit 0b5fcd32d037d39d415448c6f9d6217fa498505e.

--- a/archlinuxcn/pulseaudio-modules-bt-git/lilac.yaml
+++ b/archlinuxcn/pulseaudio-modules-bt-git/lilac.yaml
@@ -16,3 +16,5 @@ update_on:
     aur: pulseaudio-modules-bt-git
   - source: archpkg
     archpkg: pulseaudio
+    from_pattern: ^(\d+\.\d+)\..*
+    to_pattern: \1
