--- a/archlinuxcn/pulseaudio-modules-bt/lilac.yaml
+++ b/archlinuxcn/pulseaudio-modules-bt/lilac.yaml
@@ -13,3 +13,5 @@ update_on:
     use_latest_release: true
   - source: archpkg
     archpkg: pulseaudio
+    from_pattern: ^(\d+\.\d+)\..*
+    to_pattern: \1
