--- a/archlinuxcn/arm-linux-gnueabihf-glibc/lilac.yaml
+++ b/archlinuxcn/arm-linux-gnueabihf-glibc/lilac.yaml
@@ -2,6 +2,7 @@ maintainers:
   - github: yuyichao
 
 build_prefix: archlinuxcn-x86_64
+post_build: git_pkgbuild_commit
 
 repo_depends:
   - arm-linux-gnueabihf-linux-api-headers
