[openblas-lapack-git] version going backward...

--- a/archlinuxcn/openblas-lapack-git/PKGBUILD
+++ b/archlinuxcn/openblas-lapack-git/PKGBUILD
@@ -7,6 +7,7 @@ pkgbase=openblas-git
 pkgname=(openblas-git openblas-lapack-git)
 pkgver=0.3.12.r1.gaddf7593
 pkgrel=1
+epoch=1
 pkgdesc="Optimized BLAS library based on GotoBLAS2 1.13 BSD"
 arch=('i686' 'x86_64' 'armv7h' 'aarch64')
 url="http://xianyi.github.com/OpenBLAS/"
@@ -51,9 +52,10 @@ pkgver() {
   _last_tag=$(git describe --tags --abbrev=0)
   _commit_short=$(git rev-parse --short HEAD)
   _build_number=$(git rev-list --count HEAD "^$_last_tag")
-  _ver=$(sed -ne 's/^VERSION\s*=\s*\([^[:space:]]*\).*/\1/p' Makefile.rule)
+  _ver=$(sed -ne 's/^VERSION\s*=\s*\([^[:space:]]*\).*/\1/p' Makefile.rule |
+           sed 's/\.\([a-zA-Z]\)/\1/')
 
-  printf "%s.r%s.g%s" "$_ver" "$_build_number" "$_commit_short"
+  printf "%s.0.%s.g%s" "$_ver" "$_build_number" "$_commit_short"
 }
 
 prepare() {
