pulseaudio-modules-bt-git: git_pkgbuild_commit instead of aur_post_build

--- a/archlinuxcn/pulseaudio-modules-bt-git/lilac.yaml
+++ b/archlinuxcn/pulseaudio-modules-bt-git/lilac.yaml
@@ -9,7 +9,7 @@ repo_depends:
 
 pre_build: vcs_update
 
-post_build: aur_post_build
+post_build: git_pkgbuild_commit
 
 update_on:
   - source: github
