--- a/archlinuxcn/pandoc-bin/lilac.yaml
+++ b/archlinuxcn/pandoc-bin/lilac.yaml
@@ -4,14 +4,9 @@ maintainers:
 
 build_prefix: extra-x86_64
 
-pre_build: vcs_update
-
 post_build: git_pkgbuild_commit
-
-repo_depends:
-  - soci
-  - pandoc-bin
 
 update_on:
   - source: github
-    github: rstudio/rstudio
+    github: jgm/pandoc
+    use_latest_release: true
