fakeroot-tcp: fix broken download url

--- a/archlinuxcn/fakeroot-tcp/lilac.yaml
+++ b/archlinuxcn/fakeroot-tcp/lilac.yaml
@@ -1,8 +1,7 @@
 maintainers:
   - github: DDoSolitary
 build_prefix: extra-x86_64
-pre_build: aur_pre_build
-post_build: aur_post_build
 update_on:
-  - source: aur
-    aur: fakeroot-tcp
+  - source: debianpkg
+    debianpkg: fakeroot
+    strip_release: true
