--- a/archlinuxcn/cabal-fmt/PKGBUILD
+++ b/archlinuxcn/cabal-fmt/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=cabal-fmt
 pkgver=0.1.5
 pkgrel=1
 pkgdesc="Format .cabal files"
-url="https://github.com/phadej/cabal-fmt.git"
+url="https://github.com/phadej/cabal-fmt"
 license=("GPL3")
 arch=('x86_64')
 depends=('ghc-libs' 'haskell-optparse-applicative')
