remove unused makedeps

--- a/archlinuxcn/pnpm/PKGBUILD
+++ b/archlinuxcn/pnpm/PKGBUILD
@@ -7,7 +7,7 @@ arch=('any')
 url="https://pnpm.js.org/"
 license=('MIT')
 depends=('nodejs')
-makedepends=('npm' 'jq')
+makedepends=('npm')
 source=("https://registry.npmjs.org/$pkgname/-/$pkgname-$pkgver.tgz")
 noextract=("$pkgname-$pkgver.tgz")
 sha256sums=('fbbb9a49d0f3ee4655f993c8a217982193b421c46e9e0405e0147f42af0949c9')
