--- a/archlinuxcn/csview-git/PKGBUILD
+++ b/archlinuxcn/csview-git/PKGBUILD
@@ -16,7 +16,7 @@ sha256sums=("SKIP")
 
 pkgver() {
     cd "${_pkgname}"
-    echo "$(grep '^version =' Cargo.toml|head -n1|cut -d\" -f2|cut -d\- -f1).$(git rev-list --count HEAD).g$(git rev-parse --short HEAD)"
+    echo "$(grep -oPm1 '(?<=^version = ")[^"]+' Cargo.toml).$(TZ=UTC git log -1 --pretty='%cd' --date=short-local | tr -d '-')"
 }
 
 build() {
