--- a/archlinuxcn/v2raya/lilac.yaml
+++ b/archlinuxcn/v2raya/lilac.yaml
@@ -2,6 +2,8 @@ update_on:
   - source: github
     github: v2rayA/v2rayA
     use_latest_release: true
+  - source: manual
+    manual: 1
 
 maintainers:
   - github: dctxmei
