--- a/archlinuxcn/vxl/PKGBUILD
+++ b/archlinuxcn/vxl/PKGBUILD
@@ -9,6 +9,7 @@ url='https://github.com/vxl/vxl'
 license=('BSD')
 depends=(
   ffmpeg
+  freeglut
   glu
   libdc1394
   libgeotiff
@@ -29,25 +30,25 @@ source=("${pkgname}-${pkgver}.tar.gz::https://github.com/vxl/vxl/archive/v${pkgv
 sha512sums=('113a94cd4e904d39d6ee9a854523de09f607570b97acef8e83ce95f71439549abe9f15b0bc367a0c193b2da2b68acea6b4263660bcf979fc0f87c10193253fb3')
 
 build() {
-	cmake \
-	  -B "build" \
-	  -S "${pkgname}-${pkgver}" \
-	  -DVXL_BUILD_EXAMPLES:BOOL=OFF \
-	  -DBUILD_SHARED_LIBS=BOOL:ON \
-    -DBUILD_TESTING:BOOL=OFF \
-	  -DCMAKE_INSTALL_PREFIX=/usr \
-	  -DCMAKE_SKIP_INSTALL_RPATH:BOOL=ON \
-	  -DVXL_BUILD_CORE_VIDEO:BOOL=ON \
-	  -DVXL_BUILD_DCMTK:BOOL=ON \
-	  -DVXL_BUILD_VGUI:BOOL=ON \
-	  -DVXL_USE_LFS:BOOL=ON \
-	  -Wno-dev
-	make -C "build"
+ cmake \
+   -B "build" \
+   -S "${pkgname}-${pkgver}" \
+   -DVXL_BUILD_EXAMPLES:BOOL=OFF \
+   -DBUILD_SHARED_LIBS=BOOL:ON \
+   -DBUILD_TESTING:BOOL=OFF \
+   -DCMAKE_INSTALL_PREFIX=/usr \
+   -DCMAKE_SKIP_INSTALL_RPATH:BOOL=ON \
+   -DVXL_BUILD_CORE_VIDEO:BOOL=ON \
+   -DVXL_BUILD_DCMTK:BOOL=ON \
+   -DVXL_BUILD_VGUI:BOOL=ON \
+   -DVXL_USE_LFS:BOOL=ON \
+   -Wno-dev
+ make -C "build"
 }
 
 package() {
-	make -C "build" DESTDIR="${pkgdir}" install
-	install -Dm644 "${srcdir}/${pkgname}-${pkgver}/core/vxl_copyright.h" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
+  make -C "build" DESTDIR="${pkgdir}" install
+  install -Dm644 "${srcdir}/${pkgname}-${pkgver}/core/vxl_copyright.h" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
   rm -rfv "${pkgdir}/usr/v3p"
 }
 # vim:set ts=2 sw=2 et:
