--- a/archlinuxcn/itk-git/lilac.yaml
+++ b/archlinuxcn/itk-git/lilac.yaml
@@ -2,6 +2,9 @@ maintainers:
   - github: hubutui
 build_prefix: extra-x86_64
 time_limit_hours: 4
+repo_depends:
+  - castxml
+  - gdcm
 update_on:
   - source: cmd
     cmd: python -c "import time; print(int(time.time()) // (17 * 24 * 60 * 60))"
