--- a/archlinuxcn/code-minimap-git/PKGBUILD
+++ b/archlinuxcn/code-minimap-git/PKGBUILD
@@ -2,7 +2,7 @@
 _pkgname="code-minimap"
 pkgname="${_pkgname}-git"
 pkgver=0.4.3.48.g7099262
-pkgrel=2
+pkgrel=3
 pkgdesc="A high performance code minimap render"
 arch=(i686 x86_64)
 url="https://github.com/wfxr/${_pkgname}"
@@ -16,7 +16,7 @@ sha256sums=('SKIP')
 
 pkgver() {
     cd "${_pkgname}"
-    echo "$(grep -oPm1 '(?<=^version = ")[^"]+' Cargo.toml).$(TZ=UTC git log -1 --pretty='%cd' --date=short-local | tr -d '-')"
+    echo "$(grep -oPm1 '(?<=^version = ")[^"]+' Cargo.toml).$(TZ=UTC git log -1 --pretty='%cd' --date=short-local | tr -d '-')" | tr '-' '.'
 }
 
 build() {
