android-ndk-beta: update, fix PKGBUILD and merge lilac.{py,yaml}

--- a/archlinuxcn/android-ndk-beta/PKGBUILD
+++ b/archlinuxcn/android-ndk-beta/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=android-ndk-beta
 _pkgname=${pkgname/-beta*/}
-pkgver=r21_beta2
+pkgver=r22_beta1
 pkgrel=1
 pkgdesc='Android C/C++ developer kit (beta)'
 arch=('x86_64')
@@ -21,16 +21,16 @@ optdepends=(
   'python: various helper scripts'
 )
 source=("$pkgname.sh")
-source_x86_64=("$pkgname-$pkgver.zip"::"https://dl.google.com/android/repository/${_pkgname}-${pkgver/_*/}-linux-x86_64.zip")
+source_x86_64=("$pkgname-$pkgver.zip"::"https://dl.google.com/android/repository/${_pkgname}-${pkgver/_/-}-linux-x86_64.zip")
 # SHA1 sums is kept to follow upstream releases https://github.com/android-ndk/ndk/issues/673
 sha1sums=('b0a3c3d4e148c1049f9c8b12f2632840630ea4db')
-sha1sums_x86_64=('9c20b1095124f15a8ed3f7349f1ccb69ec66e891')
+sha1sums_x86_64=('687f696f43b23e2623e7f7073bbd575d254f66f6')
 sha256sums=('a39422d48174302e1ee27f07031f20adc78224d12c17a5451129a88b47c901c1')
-sha256sums_x86_64=('ca8d28d19f13fa3cc47a0b5aac7737002007bfe5eb04b43a7e3755ab6ec56f6b')
+sha256sums_x86_64=('bc652f98718b110626999ccdac49d1f4eaa6750f1a5d3a12d681682b4fb5b378')
 
 package() {
   install -Ddm755 "$pkgdir/opt"
-  mv "$_pkgname-${pkgver/_*/}" "$pkgdir/opt/$pkgname"
+  mv "$_pkgname-${pkgver/_/-}" "$pkgdir/opt/$pkgname"
 
   install -Dm644 $pkgname.sh -t "$pkgdir/etc/profile.d/"
 
