--- a/archlinuxcn/mmv-go/lilac.yaml
+++ b/archlinuxcn/mmv-go/lilac.yaml
@@ -3,6 +3,9 @@ maintainers:
 
 build_prefix: extra-x86_64
 
+pre_build_script: |
+    update_pkgver_and_pkgrel(_G.newver)
+
 post_build_script: |
     git_pkgbuild_commit()
     update_aur_repo()
@@ -10,5 +13,5 @@ post_build_script: |
 update_on:
   - source: github
     github: itchyny/mmv
-    use_max_tag: true
+    use_latest_release: true
     prefix: v
