--- a/archlinuxcn/libpasastro/PKGBUILD
+++ b/archlinuxcn/libpasastro/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Anatoly V. Beregovoy <avberegovoy@gmail.com>
 
 pkgname=libpasastro
-pkgver=1.3.0
-pkgrel=3
+pkgver=1.4.0
+pkgrel=1
 _pkgver="v$pkgver"
 pkgdesc="Provide Pascal interface for standard astronomy libraries"
 arch=('x86_64')
@@ -12,14 +12,15 @@ license=('GPL')
 depends=('gcc-libs')
 makedepends=('git')
 options=()
-source=("git+https://github.com/pchev/libpasastro.git#tag=$_pkgver")
-sha256sums=('SKIP')
+source=("git://github.com/pchev/libpasastro.git#tag=$_pkgver" "spice-makefile")
+sha256sums=('SKIP' "SKIP")
 
 build() {
+  cp -a spice-makefile $srcdir/$pkgname/spice/Makefile
   cd $srcdir/$pkgname
   # fix: gcc complains if output directory does not exist
   mkdir -p plan404/obj
-  make -j
+  make -j V=1
 }
 
 package() {
