--- a/archlinuxcn/libpasastro/PKGBUILD
+++ b/archlinuxcn/libpasastro/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Anatoly V. Beregovoy <avberegovoy@gmail.com>
 
 pkgname=libpasastro
-pkgver=1.3.0
-pkgrel=3
+pkgver=1.4.0
+pkgrel=1
 _pkgver="v$pkgver"
 pkgdesc="Provide Pascal interface for standard astronomy libraries"
 arch=('x86_64')
@@ -12,7 +12,9 @@ license=('GPL')
 depends=('gcc-libs')
 makedepends=('git')
 options=()
-source=("git+https://github.com/pchev/libpasastro.git#tag=$_pkgver")
+# Temporary using a commit hash to fix Makefile bug
+source=("git+https://github.com/pchev/libpasastro.git#commit=e3c218d1502a18cae858c83a9a8812ab197fcb60")
+#source=("git+https://github.com/pchev/libpasastro.git#tag=$_pkgver")
 sha256sums=('SKIP')
 
 build() {
