--- a/archlinuxcn/nano-syntax-highlighting-git/PKGBUILD
+++ b/archlinuxcn/nano-syntax-highlighting-git/PKGBUILD
@@ -3,7 +3,7 @@
 _pkgname=nano-syntax-highlighting
 pkgname=$_pkgname-git
 pkgver=621.1aa64a8
-pkgrel=1
+pkgrel=2
 pkgdesc="Nano editor syntax highlighting enhancements"
 arch=('any')
 depends=('nano')
@@ -13,28 +13,31 @@ license=('GPL3')
 install=nano-syntax-highlighting.install
 provides=('nano-syntax-highlighting')
 conflicts=('nano-syntax-highlighting')
-source=('nanorc::git+https://github.com/scopatz/nanorc.git#branch=master')
-md5sums=('SKIP')
+source=('nanorc::git+https://github.com/scopatz/nanorc.git#branch=master'
+		'0001-fix-normal-color-takes-no-prefix.patch')
+sha256sums=('SKIP'
+            '3c65854506a46e33ebc94842f4338351374a7ac18cc85f837da2e594839fa94f')
 
 pkgver() {
 	cd $srcdir/nanorc
 	echo $(git rev-list --count HEAD).$(git rev-parse --short HEAD)
 }
 
+prepare() {
+	cd "${srcdir}/nanorc"
+	patch -Np1 -i "${srcdir}/0001-fix-normal-color-takes-no-prefix.patch"
+}
+
 build() {
 	# Generate nanorc.sample
-	find $srcdir/nanorc/*.nanorc -type f | sed "s@${srcdir}\/nanorc@include \/usr\/share\/$_pkgname@" > $srcdir/nanorc.sample
+	find" ${srcdir}/nanorc/*.nanorc" -type f | sed "s@${srcdir}\/nanorc@include \/usr\/share\/${_pkgname}@" > "${srcdir}/nanorc.sample"
 }
 
 package() {
-	cd $srcdir
-	
-	mkdir -p $pkgdir/usr/share/$_pkgname
-	
-	find $srcdir/nanorc/ -name '*.nanorc' | xargs install -D -m644 -t $pkgdir/usr/share/$_pkgname/
-	
-	install -D -m644 $srcdir/nanorc.sample $pkgdir/usr/share/$_pkgname/nanorc.sample
-
+	cd "${srcdir}"
+	mkdir -p "${pkgdir}/usr/share/${_pkgname}"
+	find "${srcdir}/nanorc/" -name '*.nanorc' | xargs install -D -m644 -t "${pkgdir}/usr/share/${_pkgname}/"
+	install -D -m644 "$srcdir/nanorc.sample" "${pkgdir}/usr/share/${_pkgname}/nanorc.sample"
 } 
 
 
