--- a/archlinuxcn/nginx-mod-fancyindex/lilac.yaml
+++ b/archlinuxcn/nginx-mod-fancyindex/lilac.yaml
@@ -7,4 +7,7 @@ post_build: aur_post_build
 update_on:
   - source: aur
     aur: nginx-mod-fancyindex
+  - source: alpm
+    alpm: nginx
+    strip_release: true
 staging: true
